--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
-<!DOCTYPE html>
-<html class="ui-mobile-rendering">
+<html>
 <head>
-    <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/jquery.mobile-1.0.1.min.css"/>
-    <link rel="stylesheet" href="css/styles.css"/>
-
-    <!-- The Scripts -->
-    <script src="lib/jquery-1.7.1.min.js"></script>
-    <script src="js/jqm-config.js"></script>
-    <script src="lib/jquery.mobile-1.0.1.min.js"></script>
-    <script src="lib/underscore-min.js"></script>
-    <script src="lib/backbone-min.js"></script>
-    <script src="js/models/employeemodel.js"></script>
-    <script src="js/views/employeelist.js"></script>
-    <script src="js/views/employeedetails.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/main.js"></script>
+<script src="css/source-sans-pro.js"></script>
+<link href="css/styles.css" rel="stylesheet">
 </head>
+<body>
 
-<body></body>
+<script id="home-tpl" type="text/x-handlebars-template">
+    <div class='header'><h1>Home</h1></div>
+    <div class='search-bar'><input class='search-key' type="search"/></div>
+    <div class="wrapper"><ul class='employee-list'></ul></div>
+</script>
 
+<script id="employee-li-tpl" type="text/x-handlebars-template">
+    {{#.}}
+    <li><a href="#employees/{{this.id}}">{{this.firstName}} {{this.lastName}}<br/>{{this.title}}</a></li>
+    {{/.}}
+</script>
+
+<script src="lib/jquery-1.8.2.min.js"></script>
+<script src="lib/iscroll.js"></script>
+<script src="lib/handlebars.js"></script>
+<script src="js/storage/memory-store.js"></script>
+<script src="HomeView.js"></script>
+<script src="main.js"></script>
+
+</body>
 </html>
